Use ignition-math as package name

--- a/precise/debian/changelog
+++ b/precise/debian/changelog
@@ -1,5 +1,5 @@
-ignmath (0.1.0~precise) precise; urgency=low
+ignition-math (0.1.0~precise) precise; urgency=low
 
-  * ignmath 0.1.0 release
+  * ignition-math 0.1.0 release
 
  -- Jose Luis Rivero <jrivero@osrfoundation.org>  Mon, 16 Jun 2014 17:35:41 +0200
