Fix release version

--- a/precise/debian/changelog
+++ b/precise/debian/changelog
@@ -1,4 +1,4 @@
-ignition-math (0.1.0~precise) precise; urgency=low
+ignition-math (0.1.0-1~precise) precise; urgency=low
 
   * ignition-math 0.1.0 release
 
