--- a/saucy/debian/changelog
+++ b/saucy/debian/changelog
@@ -1,4 +1,4 @@
-ignition-math (0.1.0~saucy) saucy; urgency=low
+ignition-math (0.1.0-1~saucy) saucy; urgency=low
 
   * ignition-math 0.1.0 release
 
