--- a/trusty/debian/changelog
+++ b/trusty/debian/changelog
@@ -1,5 +1,5 @@
-ignition-math (0.1.0~trusty) trusty; urgency=low
+ignition-math (0.1.0-1~trusty) trusty; urgency=low
 
-  * ignition-math 0.1.0 release
+  * ignition-math 0.1.0-1 release
 
  -- Jose Luis Rivero <jrivero@osrfoundation.org>  Mon, 16 Jun 2014 17:35:41 +0200
