--- a/precise/debian/changelog
+++ b/precise/debian/changelog
@@ -2,6 +2,12 @@ ignition-math (1.0.0-1~precise) precise; urgency=medium
 
   * ignition-math 1.0.0-1 release
 
+ -- Nate Koenig <nate@osrfoundation.org>  Fri, 06 Mar 2015 10:46:33 -0800
+
+ignition-math (1.0.0-1~precise) precise; urgency=medium
+
+  * ignition-math 1.0.0-1 release
+
  -- Nate Koenig <nate@osrfoundation.org>  Fri, 06 Mar 2015 10:46:08 -0800
 
 ignition-math (0.2.0-1~precise) precise; urgency=medium
