--- a/precise/debian/changelog
+++ b/precise/debian/changelog
@@ -1,6 +1,6 @@
-ignition-math (2.0.0-1~precise) precise; urgency=medium
+ignition-math2 (2.0.0-1~precise) precise; urgency=medium
 
-  * ignition-math 2.0.0-1 release
+  * ignition-math2 2.0.0-1 release
 
  -- Nate Koenig <nate@osrfoundation.org>  Fri, 17 Apr 2015 08:23:50 -0700
 
