--- a/trusty/debian/changelog
+++ b/trusty/debian/changelog
@@ -1,6 +1,6 @@
-ignition-math (2.0.0-1~trusty) trusty; urgency=medium
+ignition-math2 (2.0.0-1~trusty) trusty; urgency=medium
 
-  * ignition-math 2.0.0-1 release
+  * ignition-math2 2.0.0-1 release
 
  -- Nate Koenig <nate@osrfoundation.org>  Fri, 17 Apr 2015 08:23:49 -0700
 
