--- a/trusty/debian/changelog
+++ b/trusty/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.0.1-1~trusty) trusty; urgency=medium
+
+  * ignition-math2 2.0.1-1 release
+
+ -- Nate Koenig <nate@osrfoundation.org>  Fri, 17 Apr 2015 09:58:02 -0700
+
 ignition-math2 (2.0.0-1~trusty) trusty; urgency=medium
 
   * ignition-math2 2.0.0-1 release
