--- a/utopic/debian/changelog
+++ b/utopic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.0.1-3~utopic) utopic; urgency=medium
+
+  * ignition-math2 2.0.1-3 release
+
+ -- Nate Koenig <nate@osrfoundation.org>  Fri, 17 Apr 2015 11:59:35 -0700
+
 ignition-math2 (2.0.1-2~utopic) utopic; urgency=medium
 
   * ignition-math2 2.0.1-2 release
