--- a/trusty/debian/changelog
+++ b/trusty/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.0.2-1~trusty) trusty; urgency=medium
+
+  * ignition-math2 2.0.2-1 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Mon, 04 May 2015 14:16:27 +0200
+
 ignition-math2 (2.0.1-3~trusty) trusty; urgency=medium
 
   * ignition-math2 2.0.1-3 release
