--- a/precise/debian/changelog
+++ b/precise/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.0.2-2~precise) precise; urgency=medium
+
+  * ignition-math2 2.0.2-2 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Mon, 04 May 2015 16:51:26 +0200
+
 ignition-math2 (2.0.2-1~precise) precise; urgency=medium
 
   * ignition-math2 2.0.2-1 release
