--- a/trusty/debian/changelog
+++ b/trusty/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.1.0-1~trusty) trusty; urgency=medium
+
+  * ignition-math2 2.1.0-1 release
+
+ -- Nate Koenig <nate@osrfoundation.org>  Thu, 21 May 2015 18:07:24 -0700
+
 ignition-math2 (2.0.4-1~trusty) trusty; urgency=medium
 
   * ignition-math2 2.0.4-1 release
