--- a/utopic/debian/changelog
+++ b/utopic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.1.1-1~utopic) utopic; urgency=medium
+
+  * ignition-math2 2.1.1-1 release
+
+ -- Nate Koenig <nate@osrfoundation.org>  Fri, 22 May 2015 07:42:18 -0700
+
 ignition-math2 (2.1.0-1~utopic) utopic; urgency=medium
 
   * ignition-math2 2.1.0-1 release
