--- a/precise/debian/changelog
+++ b/precise/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.2.0-1~precise) precise; urgency=medium
+
+  * ignition-math2 2.2.0-1 release
+
+ -- Nate Koenig <nate@osrfoundation.org>  Mon, 27 Jul 2015 14:51:28 -0700
+
 ignition-math2 (2.1.1-1~precise) precise; urgency=medium
 
   * ignition-math2 2.1.1-1 release
