--- a/utopic/debian/changelog
+++ b/utopic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.2.1-1~utopic) utopic; urgency=medium
+
+  * ignition-math2 2.2.1-1 release
+
+ -- Nate Koenig <nate@osrfoundation.org>  Tue, 28 Jul 2015 07:43:30 -0700
+
 ignition-math2 (2.2.0-1~utopic) utopic; urgency=medium
 
   * ignition-math2 2.2.0-1 release
