--- a/vivid/debian/changelog
+++ b/vivid/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.2.2-1~vivid) vivid; urgency=medium
+
+  * ignition-math2 2.2.2-1 release
+
+ -- Nate Koenig <nate@osrfoundation.org>  Mon, 03 Aug 2015 17:20:38 -0700
+
 ignition-math2 (2.2.1-1~vivid) vivid; urgency=medium
 
   * ignition-math2 2.2.1-1 release
