--- a/vivid/debian/changelog
+++ b/vivid/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.2.3-1~vivid) vivid; urgency=medium
+
+  * ignition-math2 2.2.3-1 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Fri, 18 Sep 2015 00:00:48 +0200
+
 ignition-math2 (2.2.2-1~vivid) vivid; urgency=medium
 
   * ignition-math2 2.2.2-1 release
