--- a/trusty/debian/changelog
+++ b/trusty/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.3.0-1~trusty) trusty; urgency=medium
+
+  * ignition-math2 2.3.0-1 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Fri, 15 Jan 2016 20:12:48 +0100
+
 ignition-math2 (2.2.3-1~trusty) trusty; urgency=medium
 
   * ignition-math2 2.2.3-1 release
