--- a/trusty/debian/changelog
+++ b/trusty/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.4.0-1~trusty) trusty; urgency=medium
+
+  * ignition-math2 2.4.0-1 release
+
+ -- Nate Koenig <nkoenig@osrfoundation.org>  Fri, 17 Jun 2016 14:48:13 +0600
+
 ignition-math2 (2.3.0-1~trusty) trusty; urgency=medium
 
   * ignition-math2 2.3.0-1 release
