--- a/vivid/debian/changelog
+++ b/vivid/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.4.1-1~vivid) vivid; urgency=medium
+
+  * ignition-math2 2.4.1-1 release
+
+ -- Nate Koenig <nkoenig@osrfoundation.org>  Fri, 08 Jul 2016 11:44:15 -0700
+
 ignition-math2 (2.4.0-1~vivid) vivid; urgency=medium
 
   * ignition-math2 2.4.0-1 release
