--- a/vivid/debian/changelog
+++ b/vivid/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.5.0-1~vivid) vivid; urgency=medium
+
+  * ignition-math2 2.5.0-1 release
+
+ -- Nate Koenig <nkoenig@osrfoundation.org>  Thu, 21 Jul 2016 08:42:40 -0700
+
 ignition-math2 (2.4.1-1~vivid) vivid; urgency=medium
 
   * ignition-math2 2.4.1-1 release
