--- a/vivid/debian/changelog
+++ b/vivid/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math2 (2.7.0-1~vivid) vivid; urgency=medium
+
+  * ignition-math2 2.7.0-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Wed, 04 Jan 2017 10:13:49 -0800
+
 ignition-math2 (2.6.0-1~vivid) vivid; urgency=medium
 
   * ignition-math2 2.6.0-1 release
