--- a/trusty/debian/changelog
+++ b/trusty/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math3 (3.0.1-2~trusty) trusty; urgency=medium
+
+  * ignition-math3 3.0.1-2 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Tue, 24 Jan 2017 22:41:07 +0100
+
 ignition-math3 (3.0.0-1~trusty) trusty; urgency=medium
 
   * ignition-math3 3.0.0-1 release
