--- a/zesty/debian/changelog
+++ b/zesty/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math3 (3.1.0-1~zesty) zesty; urgency=medium
+
+  * ignition-math3 3.1.0-1 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Wed, 12 Apr 2017 02:03:37 +0200
+
 ignition-math3 (3.0.0-2~zesty) zesty; urgency=medium
 
   * ignition-math3 3.0.0-2 release
