--- a/zesty/debian/changelog
+++ b/zesty/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math3 (3.2.0-1~zesty) zesty; urgency=medium
+
+  * ignition-math3 3.2.0-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Mon, 15 May 2017 17:01:57 -0700
+
 ignition-math3 (3.1.0-1~zesty) zesty; urgency=medium
 
   * ignition-math3 3.1.0-1 release
