--- a/debian/stretch/debian/changelog
+++ b/debian/stretch/debian/changelog
@@ -1,3 +1,9 @@
+ignition-math3 (3.3.0-1~stretch) stretch; urgency=medium
+
+  * ignition-math3 3.3.0-1 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Sat, 02 Dec 2017 00:36:22 +0100
+
 ignition-math3 (3.2.0-1~stretch) stretch; urgency=medium
 
   * ignition-math3 3.2.0-1 release
